# ShakespearGPT

./: .gitignore  README.md  pyproject.toml
src/: bengio_et_al_2003.ipynb  bigram.ipynb  bigram.py  data_module.py  main.ipynb  model.py  train.ipynb  trigram.ipynb
