[tool.poetry]
name = "ShakespearGPT"
version = "0.1.0"
description = ""
authors = ["sampath <sampathkovvali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
lightning = "^2.0.7"
wandb = "^0.15.8"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
autopep8 = "^2.0.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
